<resources>
    <string name="app_name">Suggestly</string>
    <string name="title_home">Home</string>
    <string name="title_search">Explore</string>
    <string name="title_library">Library</string>
    <string name="title_settings">Settings</string>
    <string name="title_similar_venues">Similar Venues</string>
    <string name="title_other_books">Other Books</string>
    <string name="title_info">Information</string>
    <string name="title_topSuggestion">Where Ever You\'re At… Read This New York Times Bestseller!</string>
    <string name="title_selectedBy">Selected By Suggestly</string>
    <string name="title_createAccount">Create Account</string>
    <string name="getting_started_message">Thank you for checking out Suggestly, we hope our recommendations can make your life a little more fun.</string>
    <string name="getting_started_greeting">Hey, There.</string>
    <string name="getting_started_button">Get Started</string>
    <string name="suggest_logo_description">suggestly logo</string>
    <string name="finalize_getting_location_message">Retrieving Your Location.</string>
    <string name="finalize_getting_suggestions_message">Finding Suggestions Near You.</string>
    <string name="finalize_personalizing_experience_message">Personalizing Your Experience.</string>
    <string name="finalize_finalizing_message">Finalizing.</string>
    <string name="enable_location_services_title">Find Suggestions Nearby</string>
    <string name="enable_location_services_message">Allow Location Services to find suggestions near you and access location-based features.</string>
    <string name="enable_button">Enable</string>
    <string name="skip_button">skip</string>
    <string name="enter_location_manually">Enter Location Manually</string>
    <string name="search_for_your_location">Search For Your Location</string>
    <string name="close">close</string>
    <string name="title_powered_by_google">Powered By Google</string>
    <string name="title_activity_settings">User Preferences</string>
    <string name="title_user_preferences">User Preferences</string>
    <string name="add_to_saved_button">add to saved</string>
    <string name="add_to_saved_message">Looks like you haven\'t saved anything yet!</string>
    <string name="add_to_favorites_button">add to favorites</string>
    <string name="add_to_favorites_message">Search, explore, gander and add to favorites.</string>
    <string name="title_tab_saved">Saved</string>
    <string name="title_tab_favorites">Favorites</string>
    <string name="more">More</string>
    <string name="suggestion_recommended_title">Recommended Suggestions in Your Area</string>
    <string name="suggestion_recommended_short_description">A mixture of new things and suggestion based around you.</string>
    <string name="suggestion_trending_title">What People Are Craving Near You</string>
    <string name="suggestion_trending_short_description">Keep up with the latest trends.</string>
    <string name="suggestion_restaurants_title">Dining Experiences in Your Neighborhood</string>
    <string name="suggestion_restaurants_short_description">Sit down, relax, and grab a bite.</string>
    <string name="suggestion_bestsellers_title">New York Times Bestsellers: Fiction</string>
    <string name="suggestion_bestsellers_short_description">Bestselling literature recognized by the most distinguished source.</string>
    <string name="suggestion_breweries_title">Breweries People Are Craving Near You</string>
    <string name="suggestion_breweries_short_description">Call a friend, order a drink, drive responsibly.</string>
    <string name="suggestion_family_fun_title">Nothing specific, Just Fun Things To Do.</string>
    <string name="suggestion_family_fun_short_description">Things To With Your Family.</string>
    <string name="suggestion_nyt_nonfiction_title">New York Times Bestsellers: Nonfiction</string>
    <string name="suggestion_nyt_non_fiction_short_description">Bestselling literature recognized by the most distinguished source.</string>
    <string name="suggestion_active_title">For The Active Homo Sapien</string>
    <string name="suggestion_active_short_description">Explore a park, jump out of an airplane, whatever… its up to you.</string>
    <string name="suggestion_social_title">Exploit Your Inner Socialite</string>
    <string name="suggestion_social_short_description">Make new friends, or catch up with old ones. Then take on the world!</string>
    <string name="suggestion_entertainment_title">Upcoming Events &amp; Other Things To Do</string>
    <string name="suggestion_entertainment_short_description">Explore a festival, catch a fair, scroll and select whatever is there</string>
    <string name="title_address">Address / Description</string>
    <string name="title_italian_button">Italian Restaurants</string>
    <string name="title_brewery_button">Brewery</string>
    <string name="title_active_button">Active</string>
    <string name="title_nightlife_button">Nightlife</string>
    <string name="title_parks_button">Parks</string>
    <string name="title_shopping_button">Shopping</string>
    <string name="title_thai_button">Thai Restaurants</string>
    <string name="title_meet_up_button">Meet Ups</string>
    <string name="title_japanese_button">Japanese Restaurants</string>
    <string name="title_chinese_button">Chinese Restaurants</string>
    <string name="title_coffee_shop_button">Coffee Shops</string>
    <string name="title_korean_button">Korean Restaurants</string>
    <string name="title_events_button">Events</string>
    <string name="title_shows_button">Shows</string>
    <string name="title_movies_button">Movies</string>
    <string name="title_yoga_button">Yoga</string>
    <string name="title_recipes_button">Recipes</string>
    <string name="title_mexican_button">Mexican Restaurants</string>
    <string name="title_fiction_button">Fiction Books</string>
    <string name="title_non_fiction_button">NonFiction Books</string>
    <string name="title_indian_button">Indian Restaurants</string>
    <string name="title_baking_button">Baking</string>
    <string name="title_categories">Categories</string>
    <string name="title_hint_email">email</string>
    <string name="title_hint_about">about</string>
    <string name="title_hint_feedback">enter you message here.</string>
    <string name="title_button_send">send</string>
    <string name="email_application_not_found">Email application not found!</string>
    <string name="title_description">Description</string>
    <string name="title_genre">Genre</string>
    <string name="title_location">Location</string>
    <string name="title_similar_categories">Other Categories</string>
    <string name="written_by">Written %1$s</string>
    <string name="publish_by">Published by %1$s</string>
    <string name="title_go">GO</string>
    <string name="title_buy">BUY</string>
    <string name="title_reload_venues">reload venues</string>
    <string name="title_finding_location">Retrieving Your Location.</string>
    <string name="title_finding_suggestions">Finding Suggestions Near You.</string>
    <string name="title_saved">Saved.</string>
    <string name="title_saved_error">Error Saving.</string>
    <string name="title_deleted">Deleted.</string>
    <string name="title_deleted_error">Error Deleting.</string>
    <string name="title_suggestion_image">suggestion image</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_twitter">Twitter</string>
    <string name="title_instagram">Instagram</string>
    <string name="title_phone">Call</string>
    <string name="title_website">Website</string>
    <string name="rating">%1$s Rating</string>
    <string name="message_try_searching_a_place_or_an_event">Try searching a place or an event.</string>
    <string name="title_status_unknown">No current information regarding hours.</string>
    <string name="title_favorite">favorite</string>
    <string name="message_information">%1$s was written %2$s and published by %3$s. %1$s is currently number %4$d on the New York Times Bestsellers and has been listed for %5$d %6$s</string>
    <string name="title_push_notifications">Never Miss an Update</string>
    <string name="message_push_notification">Receive notifications for hot upcoming events, invites to experiences, and new suggestions in your sphere.</string>
    <string name="title_welcome_to_suggestly">Welcome To Suggestly</string>
    <string name="push_notifications_title">Never Miss an Update</string>
    <string name="push_notification_messages">Receive notifications for hot upcoming events, invites to experiences, and new suggestions in your sphere.</string>
    <string name="title_network_error">Network Error</string>
    <string name="message_network_error_terminate">Unable to connect to Internet. Please check your network connection and try again.</string>
    <string name="message_network_error_dismiss">Unable to connect to Internet. %1$s</string>
    <string name="message_network_error_search">Connect to the Internet for better results.</string>
    <string name="title_continue">Continue</string>
    <string name="message_location_services_denied">Location permission was denied. Disabling Location Services.</string>
    <string name="title_push_notification_notification">Suggestly</string>
    <string name="message_push_notification_notification">We suggest checking out %1$s.</string>
    <string name="title_auth_greeting">Plan Your\nNext Memory</string>
    <string name="title_auth_message">Click one of the buttons below to sign in or register.</string>
    <string name="title_sign_up">Don\'t have an account? Sign Up.</string>
    <string name="title_register_greeting">Almost There!</string>
    <string name="prompt_name">First and Last name</string>
    <string name="prompt_email_address">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_sign_in">Already have an account? Sign in.</string>
    <string name="text_or">OR</string>
    <string name="title_sign_in_greeting">Welcome Back!\nWe\'re Glad To \nSee you</string>
    <string name="title_sign_in_message">Sign in and start planning your next memory</string>
    <string name="prompt_reset_password">Forgot your password? Reset it.</string>
    <string name="title_rest_password">Oops! Reset Your Password Below.</string>
    <string name="reset">Check your email for reset link</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="reset_password_failed">Error: could not send password reset link</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome">Start Planning Your Next Memory</string>
</resources>