<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.josephhowerton.suggestly.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.josephhowerton.suggestly.ui.explore.ExploreFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.josephhowerton.suggestly.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.josephhowerton.suggestly.ui.more.MoreFragment"
        android:label="MoreFragment"
        tools:layout="@layout/fragment_more"/>

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.josephhowerton.suggestly.ui.details.DetailsFragment"
        android:label="details_fragment"
        tools:layout="@layout/layout_details_venue" />
</navigation>